test/tests/stages/18_structures/valid/extra_credit/other_features/decr_arrow_lexing.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[44]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(arr)
  [
  const int(3)
  ]
  =
  {
  const int(0)
  ,
  const int(1)
  ,
  const int(2)
  }
  ;
  int
  *
  identifier(ptr)
  =
  identifier(arr)
  +
  const int(2)
  ;
  if
  (
  identifier(ptr)
  --
  >
  identifier(arr)
  )
  {
  return
  const int(0)
  ;
  }
  return
  const int(1)
  ;
  }
