test/tests/stages/18_structures/invalid_types/extra_credit/union_type_declarations/array_of_incomplete_union_type.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[23]:
  union
  identifier(u)
  ;
  int
  identifier(main)
  (
  void
  )
  {
  union
  identifier(u)
  (
  *
  identifier(arr)
  )
  [
  const int(3)
  ]
  ;
  return
  const int(0)
  ;
  }
